# dancesport-normalization

./: .gitignore  README.md  setup.cfg
src/dancesport_normalization/: enums.py  normalizer.py
src/tests/: event_names.txt  test_normalizer.py
