[metadata]
name = dancesport-normalization
version = 0.0.1
author = Eric Lam
author_email = eric@ericblam.com
description = Package to normalize dancesport data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ballroombookkeeper/dancesport-normalization
project_urls =
    Bug Tracker = https://github.com/ballroombookkeeper/dancesport-normalization/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src